ProdIND/ProdPrograms/force-app/main/default/objects/finalTermValidation__mdt/finalTermValidation__mdt.object-meta.xml
<CustomObject>
    <label>finalTermValidation</label>
    <pluralLabel>finalTermValidations</pluralLabel>
</CustomObject>