ProdIND/ProdPrograms/force-app/main/default/objects/finalTermValidation__mdt/fields/DealerDiscounttoCustomer__c.field-meta.xml
<CustomField>
    <fullName>DealerDiscounttoCustomer__c</fullName>
    <defaultValue>15</defaultValue>
    <label>DealerDiscounttoCustomer</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>