ProdIND/ProdPrograms/force-app/main/default/objects/finalTermValidation__mdt/fields/DealerExpReimbursePercent__c.field-meta.xml
<CustomField>
    <fullName>DealerExpReimbursePercent__c</fullName>
    <label>DealerExpReimbursePercent</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>