ProdIND/ProdPrograms/force-app/main/default/objects/finalTermValidation__mdt/fields/DealerIncentiveAmountMainDealer__c.field-meta.xml
<CustomField>
    <fullName>DealerIncentiveAmountMainDealer__c</fullName>
    <defaultValue>5</defaultValue>
    <label>DealerIncentiveAmountMainDealer</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>