ProdIND/ProdPrograms/force-app/main/default/objects/finalTermValidation__mdt/fields/documentChargesFinAmount__c.field-meta.xml
<CustomField>
    <fullName>documentChargesFinAmount__c</fullName>
    <label>documentChargesFinAmount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>