ProdIND/ProdPrograms/force-app/main/default/objects/finalTermValidation__mdt/fields/documentChargesMinAmount__c.field-meta.xml
<CustomField>
    <fullName>documentChargesMinAmount__c</fullName>
    <label>documentChargesMinAmount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>