ProdIND/ProdPrograms/force-app/main/default/objects/finalTermValidation__mdt/fields/DocumentChargesMinPercentage__c.field-meta.xml
<CustomField>
    <fullName>DocumentChargesMinPercentage__c</fullName>
    <label>DocumentChargesMinPercentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>