ProdIND/ProdPrograms/force-app/main/default/objects/finalTermValidation__mdt/fields/DocumentchargesPercentage__c.field-meta.xml
<CustomField>
    <fullName>DocumentchargesPercentage__c</fullName>
    <label>DocumentchargesPercentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>