ProdIND/ProdPrograms/force-app/main/default/objects/finalTermValidation__mdt/fields/DsmIncentiveOne__c.field-meta.xml
<CustomField>
    <fullName>DsmIncentiveOne__c</fullName>
    <defaultValue>5</defaultValue>
    <label>DsmIncentiveOne</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>