ProdIND/ProdPrograms/force-app/main/default/objects/finalTermValidation__mdt/fields/DsmIncentiveOneC__c.field-meta.xml
<CustomField>
    <fullName>DsmIncentiveOneC__c</fullName>
    <defaultValue>10</defaultValue>
    <label>DsmIncentiveOneC</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>