ProdIND/ProdPrograms/force-app/main/default/objects/finalTermValidation__mdt/fields/DsmIncentiveTwoH__c.field-meta.xml
<CustomField>
    <fullName>DsmIncentiveTwoH__c</fullName>
    <defaultValue>5</defaultValue>
    <label>DsmIncentiveTwoH</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>