ProdIND/ProdPrograms/force-app/main/default/objects/finalTermValidation__mdt/fields/GiftThroughDealerAmountC__c.field-meta.xml
<CustomField>
    <fullName>GiftThroughDealerAmountC__c</fullName>
    <defaultValue>10</defaultValue>
    <label>GiftThroughDealerAmountC</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>