ProdIND/ProdPrograms/force-app/main/default/objects/finalTermValidation__mdt/fields/ManufacturerIncentive__c.field-meta.xml
<CustomField>
    <fullName>ManufacturerIncentive__c</fullName>
    <label>ManufacturerIncentive</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>