ProdIND/ProdPrograms/force-app/main/default/objects/finalTermValidation__mdt/fields/MfrExpReimbursePercent__c.field-meta.xml
<CustomField>
    <fullName>MfrExpReimbursePercent__c</fullName>
    <label>MfrExpReimbursePercent</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>