ProdIND/ProdPrograms/force-app/main/default/objects/finalTermValidation__mdt/fields/NonDlrDsmIncentiveOne__c.field-meta.xml
<CustomField>
    <fullName>NonDlrDsmIncentiveOne__c</fullName>
    <defaultValue>10</defaultValue>
    <label>NonDlrDsmIncentiveOne</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>