ProdIND/ProdPrograms/force-app/main/default/objects/finalTermValidation__mdt/fields/NonDlrDsmIncentiveOneC__c.field-meta.xml
<CustomField>
    <fullName>NonDlrDsmIncentiveOneC__c</fullName>
    <defaultValue>10</defaultValue>
    <label>NonDlrDsmIncentiveOneC</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>