ProdIND/ProdPrograms/force-app/main/default/objects/finalTermValidation__mdt/fields/NonDlrDsmIncentiveTwoC__c.field-meta.xml
<CustomField>
    <fullName>NonDlrDsmIncentiveTwoC__c</fullName>
    <defaultValue>10</defaultValue>
    <label>NonDlrDsmIncentiveTwoC</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>