ProdIND/ProdPrograms/force-app/main/default/objects/finalTermValidation__mdt/fields/product__c.field-meta.xml
<CustomField>
    <fullName>product__c</fullName>
    <label>product</label>
    <length>255</length>
    <type>Text</type>
</CustomField>