ProdIND/ProdPrograms/force-app/main/default/objects/finalTermValidation__mdt/fields/ProvisionalChannelCost__c.field-meta.xml
<CustomField>
    <fullName>ProvisionalChannelCost__c</fullName>
    <defaultValue>1</defaultValue>
    <label>ProvisionalChannelCost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>