ProdIND/ProdPrograms/force-app/main/default/objects/finalTermValidation__mdt/fields/ProvisionalChannelCostH__c.field-meta.xml
<CustomField>
    <fullName>ProvisionalChannelCostH__c</fullName>
    <defaultValue>1</defaultValue>
    <label>ProvisionalChannelCostH</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>