ProdIND/ProdPrograms/force-app/main/default/objects/finalTermValidation__mdt/fields/ProvisionalChannelCostHMax__c.field-meta.xml
<CustomField>
    <fullName>ProvisionalChannelCostHMax__c</fullName>
    <defaultValue>750</defaultValue>
    <label>ProvisionalChannelCostHMax</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>