ProdIND/ProdPrograms/force-app/main/default/objects/finalTermValidation__mdt/fields/ProvisionalChannelCostHMin__c.field-meta.xml
<CustomField>
    <fullName>ProvisionalChannelCostHMin__c</fullName>
    <defaultValue>1050</defaultValue>
    <label>ProvisionalChannelCostHMin</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>