ProdIND/ProdPrograms/force-app/main/default/objects/finalTermValidation__mdt/fields/ProvisionalChannelCostMax__c.field-meta.xml
<CustomField>
    <fullName>ProvisionalChannelCostMax__c</fullName>
    <defaultValue>750</defaultValue>
    <label>ProvisionalChannelCostMax</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>