ProdIND/ProdPrograms/force-app/main/default/objects/finalTermValidation__mdt/fields/ProvisionalChannelCostMin__c.field-meta.xml
<CustomField>
    <fullName>ProvisionalChannelCostMin__c</fullName>
    <defaultValue>1050</defaultValue>
    <label>ProvisionalChannelCostMin</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>