ProdIND/ProdPrograms/force-app/main/default/objects/finalTermValidation__mdt/fields/ProvisionalChannelCostS__c.field-meta.xml
<CustomField>
    <fullName>ProvisionalChannelCostS__c</fullName>
    <defaultValue>0.5</defaultValue>
    <label>ProvisionalChannelCostS</label>
    <precision>8</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>