ProdIND/ProdPrograms/force-app/main/default/objects/finalTermValidation__mdt/fields/ProvisionalChannelCostSValue__c.field-meta.xml
<CustomField>
    <fullName>ProvisionalChannelCostSValue__c</fullName>
    <defaultValue>750</defaultValue>
    <label>ProvisionalChannelCostSValue</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>