ProdIND/ProdPrograms/force-app/main/default/objects/finalTermValidation__mdt/fields/Referrer_Incentive_for_referrer__c.field-meta.xml
<CustomField>
    <fullName>Referrer_Incentive_for_referrer__c</fullName>
    <label>Referrer Incentive (for referrer)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>