ProdIND/ProdPrograms/force-app/main/default/objects/finalTermValidation__mdt/fields/serviceChargesValueMax__c.field-meta.xml
<CustomField>
    <fullName>serviceChargesValueMax__c</fullName>
    <defaultValue>3</defaultValue>
    <label>serviceChargesValueMax</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>