ProdIND/ProdPrograms/force-app/main/default/objects/finalTermValidation__mdt/fields/serviceChargesValueMin__c.field-meta.xml
<CustomField>
    <fullName>serviceChargesValueMin__c</fullName>
    <defaultValue>0.5</defaultValue>
    <label>serviceChargesValueMin</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>