ProdIND/ProdPrograms/force-app/main/default/objects/finalTermValidation__mdt/fields/StampingCharges__c.field-meta.xml
<CustomField>
    <fullName>StampingCharges__c</fullName>
    <label>StampingCharges</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>